crates/runtime-table-partition/tests/snapshots/partition_table_provider__bucket_data_filter_all_partitions.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
UnionExec
  PartitionMemTableExec: partition_value=0
  PartitionMemTableExec: partition_value=1
  PartitionMemTableExec: partition_value=2
  PartitionMemTableExec: partition_value=3
