crates/runtime-table-partition/tests/snapshots/partition_table_provider__bucket_expr_count_or_chain.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
AggregateExec: mode=Final, gby=[], aggr=[count(Int64(1))]
  CoalescePartitionsExec
          PartitionMemTableExec: partition_values=[Int64(0)]
          PartitionMemTableExec: partition_values=[Int64(1)]
        PartitionedUnionExec
      RepartitionExec: partitioning=RoundRobinBatch(22), input_partitions=2
    AggregateExec: mode=Partial, gby=[], aggr=[count(Int64(1))]
