crates/runtime-table-partition/tests/snapshots/partition_table_provider__bucket_expr_count_with_data_filter.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
AggregateExec: mode=Final, gby=[], aggr=[count(Int64(1))]
  CoalescePartitionsExec
    AggregateExec: mode=Partial, gby=[], aggr=[count(Int64(1))]
      RepartitionExec: partitioning=RoundRobinBatch(22), input_partitions=1
        PartitionMemTableExec: partition_values=[Int64(0)], filters=[value > Int64(20)]
