crates/runtime-table-partition/tests/snapshots/partition_table_provider__bucket_inequality_range.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionedUnionExec
  PartitionMemTableExec: partition_values=[Int64(0)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(1)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(3)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(4)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(5)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(6)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(7)], filters=[user_id > Int32(50), user_id <= Int32(70)]
  PartitionMemTableExec: partition_values=[Int64(8)], filters=[user_id > Int32(50), user_id <= Int32(70)]
