crates/runtime-table-partition/tests/snapshots/partition_table_provider__bucket_partition_id_filter.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_values=[Int64(0)], filters=[id = Int64(5)]
