crates/runtime-table-partition/tests/snapshots/partition_table_provider__data_filter_only.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
UnionExec
  PartitionMemTableExec: partition_value=eu-west-1
  PartitionMemTableExec: partition_value=us-east-1
  PartitionMemTableExec: partition_value=us-west-1
