crates/runtime-table-partition/tests/snapshots/partition_table_provider__date_trunc_equality.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_values=[TimestampNanosecond(1736985600000000000, None)], filters=[timestamp = TimestampNanosecond(1737023400000000000, None)]
