crates/runtime-table-partition/tests/snapshots/partition_table_provider__date_trunc_greater_than.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
UnionExec
  PartitionMemTableExec: partition_value=1736985600000000000
  PartitionMemTableExec: partition_value=1737072000000000000
  PartitionMemTableExec: partition_value=1737158400000000000
