crates/runtime-table-partition/tests/snapshots/partition_table_provider__date_trunc_range.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_value=1736985600000000000
